Fixed visibility issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,8 +18,10 @@ body {
   flex-direction: column;
 }
 a {
-  color: #ffabab;
+  color: #ca670d;
   text-decoration: none;
+  text-align: center;
+  border: solid orange;
 }
 a:hover, a:focus {
   color: #d85b5b;  
@@ -131,7 +133,7 @@ nav h1 a {
   justify-content: center;
 }
 .filter-options h2 {
-  color: white;
+  color: black;
   font-size: 1.5rem;
   font-weight: normal;
   line-height: 1;
